apps/backstage/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backstage
  namespace: backstage
spec:
  parentRefs:
    - name: platform
      namespace: envoy-gateway-system
  hostnames:
    - backstage.kind.localhost
  rules:
    - backendRefs:
        - name: backstage
          port: 7007
